--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 {{!-- https://github.com/emilyannz/chatty/pull/1 --}}
 
-<div class="main-container">
+{{!-- <div class="main-container">
   <div class="nav-container">
     <h2 class="nav-title">Nashville Chatty Magoos</h2>
     <div class="container">
@@ -18,4 +18,4 @@
     </div>
   </div>
   {{outlet}}
-</div>
+</div> --}}
