--- a/app/room/template.hbs
+++ b/app/room/template.hbs
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="main-room-container">
   <div class="container">
     <h1 class="room-title">Main Chat Room</h1>
     <div class="message-room-container">
