--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,33 @@
-@import "yoga";
+@import 'variables';
+@import 'base';
+@import 'messages';
 
-// Uncomment this for working with yoga prototyping
-// http://rtablada.github.io/yoga-sass/#mixin-yoga-prototype
-// @include yoga-prototype();
+
+.nav-container {
+  flex-shrink: 0;
+  background: $brand-grey;
+}
+
+.nav-title {
+  margin: 0;
+  color: $brand-light-grey;
+  text-align: center;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-between;
+  background: $brand-light-purple;
+
+  &__link {
+    padding: $gutter / 2 $gutter;
+    background: $brand-light-purple;
+  }
+
+  & a {
+    display: block;
+    width: 100%;
+    color: inherit;
+    text-decoration: none;
+  }
+}
